crates/schema/tests/compile_fail/field_key_dash.rs
use nebula_schema::field_key;

fn main() {
    let _ = field_key!("has-dash");
}
